--- a/Qmatrix Design/biblio.bib
+++ b/Qmatrix Design/biblio.bib
@@ -17,7 +17,7 @@
 }
 
 @article{barnes2010novel,
-  title={Novel derivation and application of skill matrices: The q-matrix method},
+  title={Novel derivation and application of skill matrices: The {Q-matrix} method},
   author={Barnes, Tiffany},
   journal={Handbook on educational data mining},
   pages={159--172},
@@ -98,7 +98,7 @@
 }
 
 @article{chen2015statistical,
-  title={Statistical analysis of Q-matrix based diagnostic classification models},
+  title={Statistical analysis of {Q-matrix} based diagnostic classification models},
   author={Chen, Yunxiao and Liu, Jingchen and Xu, Gongjun and Ying, Zhiliang},
   journal={Journal of the American Statistical Association},
   volume={110},
@@ -131,7 +131,7 @@
 }
 
 @article{chiu2013statistical,
-  title={Statistical Refinement of the Q-matrix in Cognitive Diagnosis},
+  title={Statistical Refinement of the {Q-matrix} in Cognitive Diagnosis},
   author={Chiu, Chia-Yi},
   journal={Applied Psychological Measurement},
   volume={37},
@@ -142,7 +142,7 @@
 }
 
 @phdthesis{chung2014estimating,
-  title={Estimating the Q-matrix for cognitive diagnosis models in a Bayesian framework},
+  title={Estimating the {Q-matrix} for cognitive diagnosis models in a Bayesian framework},
   author={Chung, Meng-ta},
   year={2014},
   school={Columbia University}
@@ -190,7 +190,7 @@
 }
 
 @article{de2015general,
-  title={A General Method of Empirical Q-matrix Validation},
+  title={A General Method of Empirical {Q-matrix} Validation},
   author={de la Torre, Jimmy and Chiu, Chia-Yi},
   journal={Psychometrika},
   pages={1--21},
@@ -219,7 +219,7 @@
 }
 
 @inproceedings{desmarais2014refinement,
-  title={The refinement of a Q-matrix: Assessing methods to validate tasks to skills mapping},
+  title={The refinement of a {Q-matrix}: Assessing methods to validate tasks to skills mapping},
   author={Desmarais, Michel and Beheshti, Behzad and Xu, Peng},
   booktitle={Educational Data Mining 2014},
   year={2014}
@@ -320,13 +320,13 @@
 }
 
 @article{henson2009q,
-  title={Q-matrix construction},
+  title={{Q-matrix} construction},
   author={Henson, RA and Templin, JL},
   year={2009}
 }
 
 @article{kohn2015heuristic,
-  title={Heuristic cognitive diagnosis when the Q-matrix is unknown},
+  title={Heuristic cognitive diagnosis when the {Q-matrix} is unknown},
   author={K{\"o}hn, Hans-Friedrich and Chiu, Chia-Yi and Brusco, Michael J},
   journal={British Journal of Mathematical and Statistical Psychology},
   volume={68},
@@ -366,7 +366,7 @@
 }
 
 @article{li2013constructing,
-  title={Constructing and validating a Q-matrix for cognitive diagnostic analyses of a reading test},
+  title={Constructing and validating a {Q-matrix} for cognitive diagnostic analyses of a reading test},
   author={Li, Hongli and Suen, Hoi K},
   journal={Educational Assessment},
   volume={18},
@@ -385,7 +385,7 @@
 }
 
 @article{liu2012data,
-  title={Data-driven learning of Q-matrix},
+  title={Data-driven learning of {Q-matrix}},
   author={Liu, Jingchen and Xu, Gongjun and Ying, Zhiliang},
   journal={Applied psychological measurement},
   volume={36},
@@ -396,7 +396,7 @@
 }
 
 @article{liu2013theory,
-  title={Theory of the self-learning Q-matrix},
+  title={Theory of the self-learning {Q-matrix}},
   author={Liu, Jingchen and Xu, Gongjun and Ying, Zhiliang},
   journal={Bernoulli: official journal of the Bernoulli Society for Mathematical Statistics and Probability},
   volume={19},
@@ -505,7 +505,7 @@
 }
 
 @article{qin2015model,
-  title={Model identification and Q-matrix incremental inference in cognitive diagnosis},
+  title={Model identification and {Q-matrix} incremental inference in cognitive diagnosis},
   author={Qin, ChunYing and Zhang, Liang and Qiu, Duoli and Huang, Lei and Geng, Tao and Jiang, Hao and Ren, Qun and Zhou, Jinzhi},
   journal={Knowledge-Based Systems},
   volume={86},
@@ -562,7 +562,7 @@
 }
 
 @article{rupp2008effects,
-  title={The effects of Q-matrix misspecification on parameter estimates and classification accuracy in the DINA model},
+  title={The effects of {Q-matrix} misspecification on parameter estimates and classification accuracy in the DINA model},
   author={Rupp, Andr{\'e} A and Templin, Jonathan},
   journal={Educational and Psychological Measurement},
   volume={68},
@@ -591,7 +591,7 @@
 }
 
 @inproceedings{sun2014alternating,
-  title={Alternating Recursive Method for Q-matrix Learning},
+  title={Alternating Recursive Method for {Q-matrix} Learning},
   author={Sun, Yuan and Ye, Shiwei and Inoue, Shunya and Sun, Yi},
   booktitle={Educational Data Mining 2014},
   year={2014}
@@ -712,7 +712,7 @@
 }
 
 @inproceedings{xu2016boosted,
-  title={Boosted Decision Tree for Q-matrix Refinement.},
+  title={Boosted Decision Tree for {Q-matrix} Refinement.},
   author={Xu, Peng and Desmarais, Michel},
   booktitle={EDM},
   pages={551--555},
