--- a/Qmatrix Design/biblio.bib
+++ b/Qmatrix Design/biblio.bib
@@ -477,6 +477,13 @@
   organization={Association for Computational Linguistics}
 }
 
+@book{montgomery2017design,
+  title={Design and analysis of experiments},
+  author={Montgomery, Douglas C},
+  year={2017},
+  publisher={John wiley \& sons}
+}
+
 @book{murphy2012machine,
   title={Machine learning: a probabilistic perspective},
   author={Murphy, Kevin P},
