Fixed an error in the discussion part

--- a/Qmatrix Design/Qmatrix Design.tex
+++ b/Qmatrix Design/Qmatrix Design.tex
@@ -44,11 +44,7 @@ In most contexts of student skills assessment, whether the test material is admi
 
 % RQ: In this experiment, we only look at batch testing: assessment is based on the whole set of items.  But in adaptive testing, the choice of questions will depend on the current skills assessment.  Are the rules of identifiability for batch assessment the same as for adaptive testing?
 
-Consider a set of items intended to assess a student's mastery over a set of skills, or knowledge components (KC).  These items, along with the set of skills, can be designed to test a single skill at once.  Or they can be designed to involve two or more skills.  A test composed of a fixed number of items can either be composed of a mixture of single and multiple skills items, or composed of one type of items only.  Skills can themselves be defined so as to facilitate single skill per item, or multiple skills per items.  By which principles should a teacher choose among these different options?
-
-This paper addresses this question, with the general objective of designing a test that will bring the most accurate assessment of a student's skill mastery state with the least number of questions items.  
-
-The investigation is framed within the DINA model, where que question items can involve one or more skills, and where all skills are required to succeed the question, but a success can still occur through a guessing factor, and failure can also occur through a slip factor.  However, the specific factor we focus on is the \textit{identifiability} of the matrix that corresponds to the mapping of test items to skills.
+This paper addresses the question of how to design a test that will bring the most accurate assessment of a student's skill mastery state with the least number of questions items.  The investigation is framed within the DINA model, where que question items can involve one or more skills, and where all skills are required to succeed the question, but a success can still occur through a guessing factor, and failure can also occur through a slip factor.  However, the specific factor we focus on is the \textit{identifiability} of the matrix that corresponds to the mapping of test items to skills.
 
 %In adaptive testing, the goal is to ask the question items that are aligned with the student's estimated assessment and that will bring the most information, thereby increasing accuracy and reducing test length.  In a single skill framework, such as Item Response Theory (IRT), this goal is relatively well understood and straightforward. But in the case where multiple skills must be assessed simultaneously and where items can involve more than a single skill, the process is much more complex (see for eg.\ \citeNP{vie2017review}).  Assessment necessarily relies on how items relate to the skills we wish to assess.
 
@@ -291,7 +287,7 @@ Type III: Incomplete Q-matrix.
 
 Type I and Type II Q-matrices performs the same when slip and guess are low(Figure\ref{fig:theta001J4ThreeSkill}, Figure \ref{fig:theta001J5FourSkill}), but when they get higher, Type II Q-matrices show a better performance(Figure \ref{fig:theta021J4ThreeSkill}, Figure\ref{fig:theta02J5FourSkill}).
 
-However, when more questions are involved in high slip and guess, the performance becomes more tricky. Therefore, we again consider more subtypes. In 3-skill case for 8 questions, we divide Type I into two subtypes. 
+However, when more questions are involved in high slip and guess, the performance becomes more tricky. Therefore, we again consider more subtypes. In 3-skill case for 8 questions, we consider two subtypes below. 
 
 Subtype 1: Q-matrix contains each component of $\{e_{i}:i=1,...k\}$ at least twice. 
 
